@@ -5,6 +5,7 @@ import com.carry_guide.carry_guide_admin.dto.request.UserHistoryDTO;
 import com.carry_guide.carry_guide_admin.dto.request.product.ProductPriceDTO;
 import com.carry_guide.carry_guide_admin.model.entity.Product;
 import com.carry_guide.carry_guide_admin.model.entity.UserHistory;
+import com.carry_guide.carry_guide_admin.repository.JpaProductRepository;
 import com.carry_guide.carry_guide_admin.repository.JpaUserHistoryRepository;
 import com.carry_guide.carry_guide_admin.service.AIRecommendationService;
 import lombok.RequiredArgsConstructor;
@@ -13,57 +14,68 @@ import org.springframework.web.bind.annotation.*;
 
 import java.time.LocalDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/user/public")
 @RequiredArgsConstructor
 public class ProductRecommendationController {
-    private final JpaUserHistoryRepository userHistoryRepository;
-    private final AIRecommendationService aiRecommendationService;
 
+    private final JpaUserHistoryRepository historyRepo;
+    private final JpaProductRepository productRepo;
+    private final AIRecommendationService aiService;
 
+    // 🔹 SAVE USER SEARCH / CLICK HISTORY
     @PostMapping("/history/save")
     public ResponseEntity<?> saveHistory(@RequestBody UserHistoryDTO dto) {
 
-        if (userHistoryRepository.existsByCustomerIdAndProductKeyword(
-                dto.getCustomerId(), dto.getProductKeyword())) {
-            // 204 No Content – mobile just checks isSuccessful = true
-            return ResponseEntity.noContent().build();
+        if (historyRepo.existsByCustomerIdAndProductKeyword(dto.getCustomerId(), dto.getProductKeyword())) {
+            return ResponseEntity.ok("Duplicate skipped");
         }
 
         LocalDateTime parsedDate = LocalDateTime.parse(dto.getDateTime());
 
-        UserHistory history = UserHistory.builder()
+        UserHistory h = UserHistory.builder()
                 .customerId(dto.getCustomerId())
                 .productKeyword(dto.getProductKeyword())
                 .dateTime(parsedDate)
                 .build();
 
-        UserHistory saved = userHistoryRepository.save(history);
-        return ResponseEntity.ok(saved);
+        historyRepo.save(h);
+        return ResponseEntity.ok(h);
     }
 
-    // ✅ LOAD HISTORY FOR CUSTOMER
+    // 🔹 RETURN USER HISTORY
     @GetMapping("/history/{customerId}")
     public List<UserHistory> getHistory(@PathVariable Long customerId) {
-        return userHistoryRepository.findByCustomerIdOrderByDateTimeDesc(customerId);
+        return historyRepo.findByCustomerIdOrderByDateTimeDesc(customerId);
     }
 
-    // ✅ GET AI RECOMMENDATIONS BASED ON HISTORY
-    @GetMapping("/recommendations/{customerId}")
-    public List<ProductPriceDTO> getRecommendations(@PathVariable Long customerId) {
-        List<Product> products = aiRecommendationService.getRecommendationsForUser(customerId);
-        return products.stream()
+    // 🔹 MAIN HOMEPAGE RECOMMENDATION — DTO VERSION
+    @GetMapping("/recommend/{customerId}")
+    public ResponseEntity<?> recommend(@PathVariable Long customerId) {
+
+        List<Product> recommended = aiService.getRecommendationsForUser(customerId);
+
+        List<ProductPriceDTO> dtoList = recommended.stream()
                 .map(ProductMapper::toDto)
-                .toList();
+                .collect(Collectors.toList());
+
+        return ResponseEntity.ok(dtoList);
     }
 
-    // 🔥 RELATED PRODUCTS / FREQUENTLY BOUGHT TOGETHER
-    @GetMapping("/recommendations/related/{productId}")
-    public ResponseEntity<List<ProductPriceDTO>> getRelatedProducts(
-            @PathVariable Long productId
-    ) {
-        List<ProductPriceDTO> related = aiRecommendationService.getRelatedProducts(productId);
-        return ResponseEntity.ok(related);
+    // 🔹 RELATED PRODUCTS — DTO VERSION
+    @GetMapping("/related/{productId}")
+    public ResponseEntity<?> related(@PathVariable Long productId) {
+        Product p = productRepo.findByProductId(productId);
+        if (p == null) return ResponseEntity.badRequest().body("Product not found");
+
+        List<Product> related = aiService.getRelatedProducts(p);
+
+        List<ProductPriceDTO> dtoList = related.stream()
+                .map(ProductMapper::toDto)
+                .collect(Collectors.toList());
+
+        return ResponseEntity.ok(dtoList);
     }
 }
